syntax = "proto3";

package com.pojtinger.felicitas.bofied;

option go_package = "github.com/pojntfx/bofied/pkg/api/proto/v1";

import "metadata.proto";

service EventsService {
  rpc SubscribeToEvents(Empty) returns (stream EventMessage);
}

message EventMessage {
  string CreatedAt = 1;
  string Message = 2;
}
